# rust-mlp

./: AGENTS.md  CHANGELOG.md  Cargo.toml  INSTRUCTIONS.md  LICENSE  PLAN.md  README.md  RELEASE.md  ROADMAP.md
.github/workflows/: ci.yml
benches/: mlp.rs
examples/: perf_forward_batch.rs  save_load_json.rs  softmax_3class.rs  tanh_sum.rs  xor_relu.rs
scripts/: README.md  pytorch_forward_bench.py
src/: activation.rs  builder.rs  data.rs  error.rs  layer.rs  lib.rs  loss.rs  main.rs  matmul.rs  metrics.rs  mlp.rs  neuron.rs  optim.rs  serde_model.rs  train.rs
tests/: no_alloc_fit.rs
tests/golden/: mlp_v1.json
