[package]
name = "rust-mlp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/marcoshernanz/rust-mlp"
documentation = "https://docs.rs/rust-mlp"
description = "Small, from-scratch MLP (dense feed-forward) for Rust: predictable, allocation-free hot path, batched training, and optional fast GEMM backend."
keywords = ["ml", "neural-network", "mlp", "deep-learning", "inference"]
categories = ["science", "mathematics"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
matrixmultiply = { version = "0.3", optional = true }

[features]
default = []
# Enable JSON serialization/deserialization support.
serde = ["dep:serde", "dep:serde_json"]
# Use the `matrixmultiply` crate for faster batched GEMM.
matrixmultiply = ["dep:matrixmultiply"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mlp"
harness = false
